--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /*!
 * Bootstrap v3.2.0 (http://getbootstrap.com)
 * Copyright 2011-2014 Twitter, Inc.
@@ -5,6 +6,7 @@
 * Link: https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css
 */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -12,6 +14,9 @@ html {
 }
 
 body {
+  font-family: 'Lato';
+  background: #f0f0f0;
+  color: #333333;
   margin: 0
 }
 
